<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.annguyen.mortgageinterestcalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTitle"
        android:id="@+id/txtTitle"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtMonthly"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        android:hint="@string/hint1"
        android:layout_below="@+id/txtTitle"
        android:layout_alignLeft="@+id/txtYears"
        android:layout_alignStart="@+id/txtYears" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtYears"
        android:layout_marginTop="12dp"
        android:textSize="25sp"
        android:hint="@string/hint2"
        android:layout_below="@+id/txtMonthly"
        android:layout_alignLeft="@+id/txtPrincipal"
        android:layout_alignStart="@+id/txtPrincipal" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/txtPrincipal"
        android:layout_marginTop="12dp"
        android:textSize="25sp"
        android:hint="@string/hint3"
        android:layout_below="@+id/txtYears"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnInterest"
        android:id="@+id/btnInterest"
        android:layout_marginTop="18dp"
        android:textSize="25sp"
        android:layout_below="@+id/txtPrincipal"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgOpening"
        android:contentDescription="@string/imgDescription"
        android:src="@drawable/mort"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/btnInterest"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
